fix dark mode input backgrounds

--- a/style/sheets/actors/_actor.scss
+++ b/style/sheets/actors/_actor.scss
@@ -10,7 +10,7 @@
     --attribute-locked-input : transparent;
     --attribute-locked-border : transparent;
     --attribute-label : transparent;
-    --attribute-field : var(--color-cool-4);
+    --attribute-field : transparent;
     --property-icon : var(--color-cool-3);
     
 
