--- a/style/sheets/actors/_character.scss
+++ b/style/sheets/actors/_character.scss
@@ -13,7 +13,7 @@
             }
 
             .field {
-                background: var(--attribute-field);
+                background: var(--attribute-input);
 
                 a {
                     width: 100%;
